# ScatteringNetwork

./: MNISTConfig.cmake  README.md
src/: CMakeLists.txt  kernels.cpp  main.cpp  main.hpp  main_gpu.cpp  main_gpu.cu  mnist_to_opencv.cpp
